Fix scaling on mobile

--- a/dashboard/assets/dashboard.css
+++ b/dashboard/assets/dashboard.css
@@ -36,6 +36,7 @@
 
 .entity-id-input{
   width: 25rem;
+  max-width: 95vw;
 }
 
 #temp-container{
